--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "chatterbox-server",
   "version": "1.1.0",
   "description": "Implement a chat server",
-  "author": "Hack Reactor <curriculum.team@hackreactor.com>",
   "license": "UNLICENSED",
-  "private": true,
   "engines": {
     "node": ">=4.0.0"
   },
@@ -20,9 +18,11 @@
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.7.2",
+    "braces": "^3.0.2",
     "chai": "^3.5.0",
+    "diff": "^4.0.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "mocha": "^2.4.5",
+    "mocha": "^6.1.4",
     "request": "^2.70.0"
   },
   "babel": {
@@ -31,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "lodash": "^4.17.14",
     "underscore": "^1.9.1"
   }
 }
